--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,7 @@ project(Proyecto_II_Datos_II)
 set(CMAKE_CXX_STANDARD 17)
 find_package(SFML 2.5.1 COMPONENTS graphics audio)
 
-set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Proyecto_II_Datos_II main.cpp Game/PacMan.h Game/PacMan.cpp Player/player.h Player/player.cpp Player/lives.h Player/lives.cpp block.h block.cpp)
+add_executable(Proyecto_II_Datos_II main.cpp Game/PacMan.h Game/PacMan.cpp Player/player.h Player/player.cpp Player/lives.h Player/lives.cpp block.h block.cpp points.h points.cpp)
 
 target_link_libraries(Proyecto_II_Datos_II sfml-graphics sfml-audio sfml-system)
