Commit #8: Se posicionan los puntos que el jugador debe comer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,16 @@ set(CMAKE_CXX_STANDARD 17)
 find_package(SFML 2.5.1 COMPONENTS graphics audio)
 
 
-add_executable(Proyecto_II_Datos_II main.cpp Game/PacMan.h Game/PacMan.cpp Player/player.h Player/player.cpp Player/lives.h Player/lives.cpp block.h block.cpp points.h points.cpp)
+add_executable(Proyecto_II_Datos_II
+        main.cpp
+        Game/PacMan.h
+        Game/PacMan.cpp
+        Player/player.h
+        Player/player.cpp
+        Player/lives.h
+        Player/lives.cpp
+        block.h
+        block.cpp
+        points.h points.cpp)
 
 target_link_libraries(Proyecto_II_Datos_II sfml-graphics sfml-audio sfml-system)
