--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,8 +13,8 @@ add_executable(Proyecto_II_Datos_II
         Player/player.cpp
         Player/lives.h
         Player/lives.cpp
-        block.h
-        block.cpp
-        points.h points.cpp ghosts/ghosts.h ghosts/ghosts.cpp)
+        Resorces/block.h
+        Resorces/block.cpp
+        Resorces/points.h Resorces/points.cpp ghosts/ghosts.h ghosts/ghosts.cpp prueba.cpp)
 
 target_link_libraries(Proyecto_II_Datos_II sfml-graphics sfml-audio sfml-system)
